--- a/style.css
+++ b/style.css
@@ -1,30 +1,45 @@
 @import url(“styles/header.css”);
 :root {
-    --cor-de-fundo: #EBECEE;
-    }
-    body {
-        background-color: var(--cor-de-fundo);
-        }
-        h1 {
-            background-color: white;
-            }
-            :root {
-                --cor-de-fundo: #EBECEE;
-                }
+ --cor-de-fundo: #EBECEE;
+ }
+ body {
+ background-color: var(--cor-de-fundo);
+}
+ h1 {
+ background-color: white;
+ }
+ :root {
+ --cor-de-fundo: #EBECEE;
+ }
                 
-                body {
-                background-color: var(--cor-de-fundo);
-                }
-                .cabeçalho__menu-hamburguer {
-                    width: 24px;
-                    height: 24px;
-                    background-image: url(“../img/Menu.svg”);
-                    display: inline-block;
-                    }
-                    :root {
-                        --cor-de-fundo: #EBECEE;
-                        --branco: #FFFFFF;
-                        }
-                        .cabeçalho {
-                            background-color: var(--branco);
-                            }
+ body {
+  background-color: var(--cor-de-fundo);
+ }
+ .cabeçalho__menu-hamburguer {
+ width: 24px;
+ height: 24px;
+ background-image: url(“../img/Menu.svg”);
+ display: inline-block;
+ }
+ :root {
+ --cor-de-fundo: #EBECEE;
+ --branco: #FFFFFF;
+ --laranja: #EB9B00;
+ }
+ .cabeçalho {
+  background-color: var(--branco);
+ }:root {
+ --cor-de-fundo: #EBECEE;
+ --branco: #FFFFFF;
+ --laranja: #EB9B00;
+ --azul-degrade: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
+ }.lista-menu__link  {display: none;
+ position: absolute;
+ top: 100%;
+ width: 60vw;
+ background: var(--azul-degrade);
+ -webkit-background-clip: text;
+ -webkit-text-fill-color: transparent;
+ background-clip: text;
+ text-transform: uppercase;
+  }
