--- a/style.css
+++ b/style.css
@@ -12,7 +12,10 @@
  --cor-de-fundo: #EBECEE;
  }
                 
- body {
+ body {background-color: var(--cor-de-fundo);
+    font-family: var(--fonte-principal);
+    font-size: 16px;
+    font-weight: 400;
   background-color: var(--cor-de-fundo);
  }
  .cabeçalho__menu-hamburguer {
@@ -28,7 +31,11 @@
  }
  .cabeçalho {
   background-color: var(--branco);
- }:root {
+ }:root {--cor-de-fundo: #EBECEE;
+    --branco: #FFFFFF;
+    --laranja: #EB9B00;
+    --azul-degrade: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
+    --fonte-principal: “Poppins”;
  --cor-de-fundo: #EBECEE;
  --branco: #FFFFFF;
  --laranja: #EB9B00;
